UPDATE (theme) : remaniement des liens des dépendances du theme
pour correspondre à la configuration de webpack de vue electron

--- a/src/renderer/themes/super_admin/scss/app.scss
+++ b/src/renderer/themes/super_admin/scss/app.scss
@@ -7,38 +7,38 @@
 
 
 // Bootstrap
-@import "../vendors/bower_components/bootstrap/scss/functions";
-@import "../vendors/bower_components/bootstrap/scss/variables";
-@import "../vendors/bower_components/bootstrap/scss/print";
-@import "../vendors/bower_components/bootstrap/scss/reboot";
-@import "../vendors/bower_components/bootstrap/scss/type";
-@import "../vendors/bower_components/bootstrap/scss/images";
-@import "../vendors/bower_components/bootstrap/scss/code";
-@import "../vendors/bower_components/bootstrap/scss/grid";
-@import "../vendors/bower_components/bootstrap/scss/tables";
-@import "../vendors/bower_components/bootstrap/scss/forms";
-@import "../vendors/bower_components/bootstrap/scss/buttons";
-@import "../vendors/bower_components/bootstrap/scss/transitions";
-@import "../vendors/bower_components/bootstrap/scss/dropdown";
-@import "../vendors/bower_components/bootstrap/scss/button-group";
-@import "../vendors/bower_components/bootstrap/scss/input-group";
-@import "../vendors/bower_components/bootstrap/scss/custom-forms";
-@import "../vendors/bower_components/bootstrap/scss/nav";
-@import "../vendors/bower_components/bootstrap/scss/navbar";
-@import "../vendors/bower_components/bootstrap/scss/card";
-@import "../vendors/bower_components/bootstrap/scss/breadcrumb";
-@import "../vendors/bower_components/bootstrap/scss/pagination";
-@import "../vendors/bower_components/bootstrap/scss/badge";
-@import "../vendors/bower_components/bootstrap/scss/jumbotron";
-@import "../vendors/bower_components/bootstrap/scss/progress";
-@import "../vendors/bower_components/bootstrap/scss/media";
-@import "../vendors/bower_components/bootstrap/scss/list-group";
-@import "../vendors/bower_components/bootstrap/scss/close";
-@import "../vendors/bower_components/bootstrap/scss/modal";
-@import "../vendors/bower_components/bootstrap/scss/tooltip";
-@import "../vendors/bower_components/bootstrap/scss/popover"; 
-@import "../vendors/bower_components/bootstrap/scss/carousel";
-@import "../vendors/bower_components/bootstrap/scss/utilities"; 
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/print";
+@import "~bootstrap/scss/reboot";
+@import "~bootstrap/scss/type";
+@import "~bootstrap/scss/images";
+@import "~bootstrap/scss/code";
+@import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/tables";
+@import "~bootstrap/scss/forms";
+@import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/transitions";
+@import "~bootstrap/scss/dropdown";
+@import "~bootstrap/scss/button-group";
+@import "~bootstrap/scss/input-group";
+@import "~bootstrap/scss/custom-forms";
+@import "~bootstrap/scss/nav";
+@import "~bootstrap/scss/navbar";
+@import "~bootstrap/scss/card";
+@import "~bootstrap/scss/breadcrumb";
+@import "~bootstrap/scss/pagination";
+@import "~bootstrap/scss/badge";
+@import "~bootstrap/scss/jumbotron";
+@import "~bootstrap/scss/progress";
+@import "~bootstrap/scss/media";
+@import "~bootstrap/scss/list-group";
+@import "~bootstrap/scss/close";
+@import "~bootstrap/scss/modal";
+@import "~bootstrap/scss/tooltip";
+@import "~bootstrap/scss/popover"; 
+@import "~bootstrap/scss/carousel";
+@import "~bootstrap/scss/utilities"; 
 
 
 // Bootstrap overrides
