--- a/src/renderer/themes/super_admin/scss/inc/vendor-overrides/_fullcalendar.scss
+++ b/src/renderer/themes/super_admin/scss/inc/vendor-overrides/_fullcalendar.scss
@@ -276,15 +276,15 @@
   z-index: 1;
 }
 
-[data-calendar-month="0"]:before { background-image: url('../img/calendar/january.jpg'); }
-[data-calendar-month="1"]:before { background-image: url('../img/calendar/february.jpg'); }
-[data-calendar-month="2"]:before { background-image: url('../img/calendar/march.jpg'); }
-[data-calendar-month="3"]:before { background-image: url('../img/calendar/april.jpg'); }
-[data-calendar-month="4"]:before { background-image: url('../img/calendar/may.jpg'); }
-[data-calendar-month="5"]:before { background-image: url('../img/calendar/june.jpg'); }
-[data-calendar-month="6"]:before { background-image: url('../img/calendar/july.jpg'); }
-[data-calendar-month="7"]:before { background-image: url('../img/calendar/august.jpg'); }
-[data-calendar-month="8"]:before { background-image: url('../img/calendar/september.jpg'); }
-[data-calendar-month="9"]:before { background-image: url('../img/calendar/october.jpg'); }
-[data-calendar-month="10"]:before { background-image: url('../img/calendar/november.jpg'); }
-[data-calendar-month="11"]:before { background-image: url('../img/calendar/december.jpg'); }
+[data-calendar-month="0"]:before { background-image: url('~@themes/super_admin/img/calendar/january.jpg'); }
+[data-calendar-month="1"]:before { background-image: url('~@themes/super_admin/img/calendar/february.jpg'); }
+[data-calendar-month="2"]:before { background-image: url('~@themes/super_admin/img/calendar/march.jpg'); }
+[data-calendar-month="3"]:before { background-image: url('~@themes/super_admin/img/calendar/april.jpg'); }
+[data-calendar-month="4"]:before { background-image: url('~@themes/super_admin/img/calendar/may.jpg'); }
+[data-calendar-month="5"]:before { background-image: url('~@themes/super_admin/img/calendar/june.jpg'); }
+[data-calendar-month="6"]:before { background-image: url('~@themes/super_admin/img/calendar/july.jpg'); }
+[data-calendar-month="7"]:before { background-image: url('~@themes/super_admin/img/calendar/august.jpg'); }
+[data-calendar-month="8"]:before { background-image: url('~@themes/super_admin/img/calendar/september.jpg'); }
+[data-calendar-month="9"]:before { background-image: url('~@themes/super_admin/img/calendar/october.jpg'); }
+[data-calendar-month="10"]:before { background-image: url('~@themes/super_admin/img/calendar/november.jpg'); }
+[data-calendar-month="11"]:before { background-image: url('~@themes/super_admin/img/calendar/december.jpg'); }
