--- a/src/renderer/themes/super_admin/scss/inc/_variables.scss
+++ b/src/renderer/themes/super_admin/scss/inc/_variables.scss
@@ -65,6 +65,7 @@ $input-btn-padding-x-sm: 0.55rem;
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-family-icon: 'Material-Design-Iconic-Font';
+$zmdi-font-path: "~material-design-iconic-font/dist/fonts";
 $font-size-root: 13px;
 $text-muted: rgba($white, 0.7);
 $headings-color: $white;
