--- a/src/renderer/themes/super_admin/scss/inc/_fonts.scss
+++ b/src/renderer/themes/super_admin/scss/inc/_fonts.scss
@@ -4,8 +4,9 @@
   src: url('~@themes/super_admin/fonts/nunito/nunito-regular.eot');
   src: url('~@themes/super_admin/fonts/nunito/nunito-regular.eot?#iefix') format('embedded-opentype'),
   url('~@themes/super_admin/fonts/nunito/nunito-regular.woff2') format('woff2'),
-  url('~@themes/super_admin/fonts/nunito/nunito-regular.woff') format('woff'),
-  url('~@themes/super_admin/fonts/nunito/nunito-regular.svg#Nunito Regular') format('svg');
+  url('~@themes/super_admin/fonts/nunito/nunito-regular.woff') format('woff');
+//   La configuration webpack actuelle ne permet pas de charger un svg
+//   url('~@themes/super_admin/fonts/nunito/nunito-regular.svg#Nunito Regular') format('svg');
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
@@ -17,8 +18,9 @@
   src: url('~@themes/super_admin/fonts/nunito/nunito-semibold.eot');
   src: url('~@themes/super_admin/fonts/nunito/nunito-semibold.eot?#iefix') format('embedded-opentype'),
   url('~@themes/super_admin/fonts/nunito/nunito-semibold.woff2') format('woff2'),
-  url('~@themes/super_admin/fonts/nunito/nunito-semibold.woff') format('woff'),
-  url('~@themes/super_admin/fonts/nunito/nunito-semibold.svg#Nunito SemiBold') format('svg');
+  url('~@themes/super_admin/fonts/nunito/nunito-semibold.woff') format('woff');
+//   La configuration webpack actuelle ne permet pas de charger un svg
+//   url('~@themes/super_admin/fonts/nunito/nunito-semibold.svg#Nunito SemiBold') format('svg');
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
@@ -32,8 +34,9 @@
   src: url('~@themes/super_admin/fonts/nunito/nunito-bold.eot');
   src: url('~@themes/super_admin/fonts/nunito/nunito-bold.eot?#iefix') format('embedded-opentype'),
   url('~@themes/super_admin/fonts/nunito/nunito-bold.woff2') format('woff2'),
-  url('~@themes/super_admin/fonts/nunito/nunito-bold.woff') format('woff'),
-  url('~@themes/super_admin/fonts/nunito/nunito-bold.svg#Nunito Bold') format('svg');
+  url('~@themes/super_admin/fonts/nunito/nunito-bold.woff') format('woff');
+//   La configuration webpack actuelle ne permet pas de charger un svg
+//   url('~@themes/super_admin/fonts/nunito/nunito-bold.svg#Nunito Bold') format('svg');
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
