MOVE : fil d'ariane dans le header pour plus de place + footer centré

--- a/src/renderer/themes/super_admin/scss/inc/_footer.scss
+++ b/src/renderer/themes/super_admin/scss/inc/_footer.scss
@@ -1,11 +1,13 @@
 .footer {
-  text-align: center;
   padding: 1rem;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   & > p {
     color: $body-color;
