--- a/src/renderer/themes/super_admin/scss/inc/bootstrap-overrides/_breadcrumbs.scss
+++ b/src/renderer/themes/super_admin/scss/inc/bootstrap-overrides/_breadcrumbs.scss
@@ -24,6 +24,10 @@
 
 header .breadcrumb {
     border: none;
-    padding: 0;
+    padding: 0 15px;
     margin: 0;
+
+    @include media-breakpoint-up(xl) {
+        padding: 0;
+    }
 }
