--- a/src/renderer/themes/super_admin/scss/inc/bootstrap-overrides/_custom-forms.scss
+++ b/src/renderer/themes/super_admin/scss/inc/bootstrap-overrides/_custom-forms.scss
@@ -2,6 +2,8 @@
   margin-bottom: 0;
   min-height: 1.5rem;
   display: inline-block;
+  padding-left: 2rem;
+  margin-right: 1rem;
 }
 
 .custom-control-indicator {
@@ -58,6 +60,8 @@
 
 .custom-radio {
   .custom-control-indicator {
+    border-radius: 50%;
+
     &:before {
       content: '';
       position: absolute;
