WIP : Préparation des données pour l'écran de gestion

--- a/src/renderer/themes/super_admin/scss/app.scss
+++ b/src/renderer/themes/super_admin/scss/app.scss
@@ -105,34 +105,35 @@
 
 
 // Widgets
-@import "inc/widgets/past-days";
-@import "inc/widgets/visitors";
-@import "inc/widgets/pie-charts";
-@import "inc/widgets/quick-stats";
-@import "inc/widgets/photos";
-@import "inc/widgets/ratings";
-@import "inc/widgets/profile";
-@import "inc/widgets/contact";
-@import "inc/widgets/signups";
-@import "inc/widgets/time";
+// @import "inc/widgets/past-days";
+// @import "inc/widgets/visitors";
+// @import "inc/widgets/pie-charts";
+// @import "inc/widgets/quick-stats";
+// @import "inc/widgets/photos";
+// @import "inc/widgets/ratings";
+// @import "inc/widgets/profile";
+// @import "inc/widgets/contact";
+// @import "inc/widgets/signups";
+// @import "inc/widgets/time";
 
 
 // Vendor overrides
-@import "inc/vendor-overrides/flot";
-@import "inc/vendor-overrides/sparklines";
-@import "inc/vendor-overrides/select2";
-@import "inc/vendor-overrides/dropzone";
-@import "inc/vendor-overrides/nouislider";
-@import "inc/vendor-overrides/easy-pie-charts";
-@import "inc/vendor-overrides/data-tables";
-@import "inc/vendor-overrides/flatpickr";
-@import "inc/vendor-overrides/bootstrap-colorpicker";
-@import "inc/vendor-overrides/trumbowyg";
-@import "inc/vendor-overrides/fullcalendar";
-@import "inc/vendor-overrides/sweetalert2";
-@import "inc/vendor-overrides/lightgallery";
-@import "inc/vendor-overrides/jquery.scrollbar";
-@import "inc/vendor-overrides/Waves";
-@import "inc/vendor-overrides/jqtree";
-@import "inc/vendor-overrides/rateYo";
-@import "inc/vendor-overrides/jquery-text-counter";
+// @import "inc/vendor-overrides/flot";
+// @import "inc/vendor-overrides/sparklines";
+// @import "inc/vendor-overrides/select2";
+// @import "inc/vendor-overrides/dropzone";
+// @import "inc/vendor-overrides/nouislider";
+// @import "inc/vendor-overrides/easy-pie-charts";
+// @import "inc/vendor-overrides/data-tables";
+// @import "inc/vendor-overrides/flatpickr";
+// @import "inc/vendor-overrides/bootstrap-colorpicker";
+// @import "inc/vendor-overrides/trumbowyg";
+// @import "inc/vendor-overrides/fullcalendar";
+// @import "inc/vendor-overrides/sweetalert2";
+// @import "inc/vendor-overrides/lightgallery";
+// @import "inc/vendor-overrides/jquery.scrollbar";
+// @import "inc/vendor-overrides/Waves";
+// @import "inc/vendor-overrides/jqtree";
+// @import "inc/vendor-overrides/rateYo";
+// @import "inc/vendor-overrides/jquery-text-counter";
+@import "inc/vendor-overrides/v-spinner";
