--- a/src/renderer/themes/super_admin/scss/inc/_variables.scss
+++ b/src/renderer/themes/super_admin/scss/inc/_variables.scss
@@ -197,8 +197,8 @@ $table-inverse-bg: rgba($black, 0.2);
 $table-inverse-border-color: rgba($white, 0.06);
 $table-accent-bg: $border-lightest;
 $table-hover-bg: $table-accent-bg;
-$table-cell-padding: 1rem 1.5rem;
-$table-cell-padding-sm: 0.75rem 1rem;
+$table-cell-padding: 0.75 1rem;
+$table-cell-padding-sm: 0.1rem 0.5rem;
 $table-head-bg: $border-light;
 $table-head-color: $body-color;
 
