FIX : Prise en compte des changements bootstrap

--- a/src/renderer/themes/super_admin/scss/inc/_variables.scss
+++ b/src/renderer/themes/super_admin/scss/inc/_variables.scss
@@ -229,8 +229,8 @@ $code-bg: $bg-highlighted-light;
 $code-color: $white;
 
 // Alert
-$alert-padding-y: 18px;
-$alert-padding-x: 24px;
+$alert-padding-y: 1.125rem;
+$alert-padding-x: 1.5rem;
 $alert-link-font-weight: normal;
 $alert-border-width: 0;
 
