--- a/src/renderer/themes/super_admin/scss/inc/_mixins.scss
+++ b/src/renderer/themes/super_admin/scss/inc/_mixins.scss
@@ -1,32 +1,5 @@
 // Bootstrap Mixins
-@import "~bootstrap/scss/mixins/breakpoints";
-@import "~bootstrap/scss/mixins/hover";
-@import "~bootstrap/scss/mixins/image";
-@import "~bootstrap/scss/mixins/badge";
-@import "~bootstrap/scss/mixins/resize";
-@import "~bootstrap/scss/mixins/screen-reader";
-@import "~bootstrap/scss/mixins/size";
-@import "~bootstrap/scss/mixins/reset-text";
-@import "~bootstrap/scss/mixins/text-emphasis";
-@import "~bootstrap/scss/mixins/text-hide";
-@import "~bootstrap/scss/mixins/text-truncate";
-@import "~bootstrap/scss/mixins/visibility";
-@import "~bootstrap/scss/mixins/pagination";
-@import "~bootstrap/scss/mixins/lists";
-@import "~bootstrap/scss/mixins/list-group";
-@import "~bootstrap/scss/mixins/nav-divider";
-@import "~bootstrap/scss/mixins/table-row";
-@import "~bootstrap/scss/mixins/background-variant";
-@import "~bootstrap/scss/mixins/border-radius";
-@import "~bootstrap/scss/mixins/box-shadow";
-@import "~bootstrap/scss/mixins/gradients";
-@import "~bootstrap/scss/mixins/transition";
-@import "~bootstrap/scss/mixins/clearfix";
-@import "~bootstrap/scss/mixins/grid-framework";
-@import "~bootstrap/scss/mixins/grid";
-@import "~bootstrap/scss/mixins/float";
-@import "~bootstrap/scss/mixins/caret";
-
+@import "~bootstrap/scss/mixins";
 
 // Custom Mixins
 
