FIX (theme) : Correctifs mise à jour bootstrap

--- a/src/renderer/themes/super_admin/scss/inc/bootstrap-overrides/_alerts.scss
+++ b/src/renderer/themes/super_admin/scss/inc/bootstrap-overrides/_alerts.scss
@@ -19,7 +19,7 @@
 
 @each $color, $value in $theme-colors {
   .alert-#{$color} {
-    @include alert-variant($value, $value, $value);
+    @include alert-variant($value, $value, $white);
   }
 }
 
