--- a/src/renderer/themes/super_admin/scss/inc/bootstrap-overrides/_buttons.scss
+++ b/src/renderer/themes/super_admin/scss/inc/bootstrap-overrides/_buttons.scss
@@ -18,6 +18,7 @@
 .btn-dark {
   background-color: rgba($black, 0.25);
   color: $white;
+  border: none;
 
   &:hover {
     background-color: rgba($black, 0.35);
