WIP : Préparation sauvegarde des poules + interface entre lecture poule/match

--- a/src/renderer/themes/default/scss/inc/_variables.scss
+++ b/src/renderer/themes/default/scss/inc/_variables.scss
@@ -253,7 +253,7 @@ $breadcrumb-bg: transparent;
 $breadcrumb-padding-x: 0.25rem;
 
 
-// Carosuel
+// Carousel
 $carousel-control-prev-icon-bg: none;
 $carousel-control-next-icon-bg: none;
 $carousel-control-icon-width: 40px;
