--- a/src/renderer/themes/default/scss/inc/bootstrap-overrides/_modal.scss
+++ b/src/renderer/themes/default/scss/inc/bootstrap-overrides/_modal.scss
@@ -25,6 +25,11 @@
   }
 }
 
+.modal-backdrop {
+    opacity: $modal-backdrop-opacity;
+}
+  
+
 @include media-breakpoint-up(sm) {
   .modal {
     text-align: center;
