WIP (Competition/Manage/Pool) : Toolbar avec label et  bouton d'action pdf

--- a/src/renderer/themes/default/scss/inc/_toolbar.scss
+++ b/src/renderer/themes/default/scss/inc/_toolbar.scss
@@ -14,7 +14,8 @@
     }
   
     .actions {
-      margin: 0.05rem -0.8rem 0 auto;
+        position: static; // Override when actions is inside a .card-body
+        margin: 0.05rem -0.8rem 0 auto;
     }
   }
   
