UPDATE (theme) : Application d'un sous-theme compet / passage grade

--- a/src/renderer/themes/default/scss/app.scss
+++ b/src/renderer/themes/default/scss/app.scss
@@ -69,6 +69,7 @@
 @import "inc/blog";
 @import "inc/questions-answers";
 @import "inc/theme";
+@import "inc/route-theme";
 @import "inc/ie-warning";
 @import "inc/error";
 
