--- a/src/renderer/themes/default/scss/inc/_footer.scss
+++ b/src/renderer/themes/default/scss/inc/_footer.scss
@@ -1,13 +1,13 @@
 .footer {
-  padding: 1rem;
+  padding: 15px 30px;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 10%;
+  height: $footer-height;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 
   & > p {
     color: $body-color;
