--- a/src/renderer/themes/default/scss/inc/_variables.scss
+++ b/src/renderer/themes/default/scss/inc/_variables.scss
@@ -118,12 +118,14 @@ $content-title-heading-color: $white;
 
 
 // Header
-$header-height: 72px;
+$header-height: 45px;
 $header-shadow: 0 0 13px rgba($black, 0.22);
 $header-z-index: 100;
 $header-bg: rgba($black, 0.3);
 $header-bg-scrolled: $bg-highlighted-darkest;
 
+// Footer
+$footer-height: 5%;
 
 // Dropdown
 $dropdown-bg: $bg-highlighted-darkest;
