STYLE : fix margin better lisibility

--- a/src/renderer/themes/default/scss/inc/bootstrap-overrides/_card.scss
+++ b/src/renderer/themes/default/scss/inc/bootstrap-overrides/_card.scss
@@ -1,3 +1,9 @@
+section {
+    & > .card {
+        margin-bottom: 0;
+    }
+}
+
 .card {
   margin-bottom: $card-columns-margin;
   box-shadow: $card-shadow;
