FEAT (fight list) : Display fight list + marking board informations

--- a/src/renderer/themes/default/scss/app.scss
+++ b/src/renderer/themes/default/scss/app.scss
@@ -73,6 +73,8 @@
 @import "inc/ie-warning";
 @import "inc/error";
 
+// Specific project
+@import "inc/project/marking_board.scss";
 
 // Widgets
 // @import "inc/widgets/past-days";
