--- a/src/renderer/themes/default/scss/inc/_variables.scss
+++ b/src/renderer/themes/default/scss/inc/_variables.scss
@@ -198,7 +198,7 @@ $table-border-color: $border-light;
 $table-inverse-bg: rgba($black, 0.2);
 $table-inverse-border-color: rgba($white, 0.06);
 $table-accent-bg: $border-lightest;
-$table-hover-bg: $table-accent-bg;
+$table-hover-bg: $bg-highlighted-light;
 $table-cell-padding: 0.75 1rem;
 $table-cell-padding-sm: 0.1rem 0.5rem;
 $table-head-bg: $border-light;
