--- a/src/renderer/themes/default/scss/inc/bootstrap-overrides/_close.scss
+++ b/src/renderer/themes/default/scss/inc/bootstrap-overrides/_close.scss
@@ -1,8 +1,10 @@
 .close {
   @include transition(opacity 300ms);
   cursor: pointer;
+  color: $secondary;
 
   &, &:hover {
     opacity: 1;
+    color: $secondary;
   }
 }
