FIX (style) : table td cell padding

--- a/src/renderer/themes/default/scss/inc/_variables.scss
+++ b/src/renderer/themes/default/scss/inc/_variables.scss
@@ -189,17 +189,17 @@ $navigation-link-hover-bg: rgba($white, 0.04);
 $navigation-link-active-bg: rgba($white, 0.06);
 
 
-// logo
+// Logo
 $logo-bg: rgba($black, 0.18);
 
 
-// Tabels
+// Tables
 $table-border-color: $border-light;
 $table-inverse-bg: rgba($black, 0.2);
 $table-inverse-border-color: rgba($white, 0.06);
 $table-accent-bg: $border-lightest;
 $table-hover-bg: $bg-highlighted-light;
-$table-cell-padding: 0.75 1rem;
+$table-cell-padding: 0.75rem 1rem;
 $table-cell-padding-sm: 0.1rem 0.5rem;
 $table-head-bg: $border-light;
 $table-head-color: $body-color;
