--- a/src/renderer/themes/default/scss/inc/_variables.scss
+++ b/src/renderer/themes/default/scss/inc/_variables.scss
@@ -4,6 +4,16 @@ $enable-shadows: false;
 
 
 // Colors
+$gray-100: #f8f9fa !default;
+$gray-200: #e9ecef !default;
+$gray-300: #dee2e6 !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #6c757d !default;
+$gray-700: #495057 !default;
+$gray-800: #343a40 !default;
+$gray-900: #212529 !default;
+
 $white: #ffffff;
 $black: #000000;
 $blue: #007bff;
@@ -16,6 +26,9 @@ $yellow: #ffc107;
 $green: #28a745;
 $teal: #20c997;
 $cyan: #17a2b8;
+$brown: #654321;
+$gold: #dab241;
+$silver: $gray-600;
 
 $colors: (
   'blue': $blue,
@@ -25,11 +38,14 @@ $colors: (
   'red': $red,
   'orange': $orange,
   'yellow': $yellow,
+  'brown': $brown,
   'green': $green,
   'teal': $teal,
   'cyan': $cyan,
   'white': $white,
-  'black': $black
+  'black': $black,
+  'gold': $gold,
+  'silver': $silver
 );
 
 $theme-colors: (
@@ -38,7 +54,10 @@ $theme-colors: (
   success: $green,
   info: $cyan,
   warning: $yellow,
-  danger: $red
+  danger: $red,
+  first-place: $gold,
+  second-place: $silver,
+  third-place: $brown
 );
 
 // Common action colors
