FEAT (pool list) : Possibilité d'ajouter un match supplémentaire

--- a/src/renderer/themes/default/scss/inc/_base.scss
+++ b/src/renderer/themes/default/scss/inc/_base.scss
@@ -41,5 +41,8 @@ textarea {
 select {
     option {
         color: black;
+        &:disabled {
+            color: #cececece;
+        }
     }
 }
