--- a/src/renderer/themes/default/scss/inc/_variables.scss
+++ b/src/renderer/themes/default/scss/inc/_variables.scss
@@ -80,7 +80,7 @@ $input-btn-padding-x-sm: 0.55rem;
 
 // Flag icon
 $flag-icon-css-path: "~flag-icon-css/flags";
-$include: gb, fr;
+$include: gb, fr, it;
 
 // Typography
 $zmdi-font-path: "~material-design-iconic-font/dist/fonts";
