⚗️ (Feedback) : base implementation

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -15,3 +15,22 @@
 /**
  * /Breadcrumbs
  */
+
+/**
+ * Modal
+ */
+.modal-box {
+    max-height: 95vh;
+    overflow-y: auto;
+}
+
+.modal-action {
+    @apply items-center;
+}
+
+.modal-xxl .modal-box {
+    max-width: 95vw;
+}
+/**
+ * /Modal
+ */
